--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "luxon": "^2.1.1",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-config": "^1.4.5",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
